[UPDATE] Authentication
- Added getCurrentUser method
- Changed auth.js to passport.js (controllers)
- Reworking Like/Dislike features (Now Unusable)
-Updated Docs (Not Completed)
